--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,7 @@
 .page {
-    min-width: 1100px;
-    max-width: 1600px;
+    min-height: 720px;
+    max-height: 800px;
+    height: 100vh;
     margin: auto;
     font-family: 'Inter', Arial, sans-serif;
     font-size: 16px; 
@@ -11,8 +12,6 @@
     background-color: #ffffff;
     background-image: url(../images/background_header.svg);
     background-size: cover;
-    min-height: 720px;
-    max-height: 800px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -130,8 +129,7 @@
 }
 
 .recipes {
-    border: 2px solid white;
-    margin-bottom: 215px;
+    padding-bottom: 215px;
 }
 
 .recipes__title {
@@ -141,7 +139,7 @@
     font-size: 44px;
     line-height: 52px;
     max-width: 580px;
-    margin-top: 100px;
+    padding-top: 100px;
     margin-left: 80px;
 }
 
@@ -160,7 +158,7 @@
     margin-top: 80px;
     display: flex;
     justify-content: center;
-    gap: 40px; /* Espacio entre los videos */
+    gap: 40px; 
     flex-wrap: wrap;
     margin-top: 80px;
 }
@@ -298,3 +296,86 @@
     height: 20px;
     margin-right: 12px;
 }
+
+.footer {
+    background-color: #0A2850;
+    color: white;
+}
+
+.footer__content {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 60px;
+    padding-left: 80px;
+    padding-right: 80px;
+}
+
+.footer__logo {
+    width: 105px;
+    height: 39px;
+}
+
+.footer__circle {
+    margin: 0%;
+}
+
+.footer__social {
+    text-align: right;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.footer__social-heading {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 20px;
+    margin: 0;
+    margin-bottom: 20px;
+}
+
+.footer__list {
+    display: flex;
+    list-style: none;
+    flex-direction: column;
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 20px;
+    margin: 0;
+    margin-bottom: 20px;
+    margin: 0;
+    padding: 0;
+}
+
+.footer__list-item {
+    margin-bottom: 16px;
+}
+
+.footer__social-link {
+    color: inherit;
+    text-decoration: none;
+}
+
+.footer__social-icon {
+    width: 16px;
+    height: 16px;
+    margin-right: 10px;
+}
+
+.footer__copyright {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 20px;
+    padding-left: 80px;
+    padding-top: 108px;
+    padding-bottom: 60px;
+}
+
+
+
