--- a/pages/index.css
+++ b/pages/index.css
@@ -1,381 +1,9 @@
-.page {
-    min-height: 720px;
-    max-height: 800px;
-    height: 100vh;
-    margin: auto;
-    font-family: 'Inter', Arial, sans-serif;
-    font-size: 16px; 
-     line-height: 20px; 
-}
-
-.header {
-    background-color: #ffffff;
-    background-image: url(../images/background_header.svg);
-    background-size: cover;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-.nav {
-    display: flex;
-    justify-content: space-between;
-}
-
-.nav__logo {
-    display: flex;
-    height: 39px;
-    width: 105px;
-    position: relative;
-    top: 30px;
-    right: 30px;
-}
-
-.nav__links {
-    display: flex;
-    column-gap: 20px;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-    list-style-type: none; 
-    margin: 30px 80px 0 0;
-    padding: 0;
-}
-
-.nav__link {
-    text-decoration: none;
-    color: inherit;
-}
-
-.header__title {
-    font-size: 58px;
-    line-height: 72px;
-    max-width: 709px;
-    margin: 183px 0 0 80px;
-}
-
-.header__title-span-accent {
-    font-family: "Noto Serif", "Times New Roman", serif;
-    font-style: italic;
-    font-weight: normal; 
-    color: #2F80ED;
-  }
-  
-  .header__title-sub {
-    font-family: "Inter", Arial, sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    letter-spacing: 1px;
-    color: #000; 
-  }
-
-.header__description {
-    font-family: "Noto Serif";
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 30px;
-    max-width: 683px;
-    margin: 28px 0 0 80px;
-}
-
-.header__image {
-    height: 568px;
-    width: 646px;
-    margin-top: 120px;
-    margin-right: 80px;
-}
-
-.header__footer {
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-    color: #838383;
-    margin: 20px 80px 40px 80px;
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .header__paraghraph {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-    max-width: 45%;
-  }
-  
-  .header__paragraph {
-    margin: 0;
-    text-align: left;
-  }
-  
-  .header__paraghraph_right {
-    text-align: right;
-    align-items: flex-end; /* Alinea los párrafos del segundo bloque a la derecha */
-  }  
-
-.content {
-    background-color: #0A2850;
-    color: white;
-    background-image: url(../images/background_recipes.svg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    margin: 0;
-    padding: 0;
-}
-
-.recipes {
-    padding-bottom: 215px;
-}
-
-.recipes__title {
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: 500;
-    font-size: 44px;
-    line-height: 52px;
-    max-width: 580px;
-    padding-top: 100px;
-    margin-left: 80px;
-}
-
-.recipes__subtitle {
-    font-family: "Noto Serif";
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 30px;
-    max-width: 438px;
-    margin-top: 20px;
-    margin-left: 80px;
-}
-
-.recipes__videos {
-    margin-top: 80px;
-    display: flex;
-    justify-content: center;
-    gap: 40px; 
-    flex-wrap: wrap;
-    margin-top: 80px;
-}
-
-.recipes__video_item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width: 560px;
-    width: 100%;
-    text-align: center;
-}
-
-.recipes__iframe {
-    width: 100%;
-    height: 315px;
-    border: none;
-}
-
-.recipes__caption {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 28px;
-    margin-top: 24px;
-}
-
-.reservation {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #D9E7FF;
-    background-image: url(..images/background_reservation.svg);
-    background-size: cover;
-    color: #000000;
-}
-
-.reservation__title {
-    font-size: 24px;
-    margin: 0px auto 80px;
-    padding-top: 100px;
-    text-align: center;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 44px;
-    line-height: 52px;
-}
-
-.reservation__form {
-    margin: 0 auto 120px;
-    max-width: 385px;
-    width: 100%;
-}
-
-.reservation__fieldset {
-    border: none;
-    padding: 0;
-    margin: 0 0 20px 0;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-
-.reservation__label {
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-    margin-bottom: 8px;
-}
-
-.reservation__input {
-    font-family: Inter;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 30px;
-    height: 60px;
-    margin-bottom: 32px;
-    border-radius: 4px;
-    border: none;
-}
-
-.reservation__input::placeholder {
-    padding-left: 20px;
-    padding-top: 15px;
-}
-
-.reservation__input[type="datetime-local"] {
-    padding-left: 20px;
-  }
-
-.reservation__button {
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-    max-width: 385px;
-    width: 100%;
-    height: 60px;
-    background-color: #2f80ed;
-    color:white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-top: 32px;
-    margin-bottom: 32px;
-}
-
-.reservation__button:hover {
-    opacity: 0.7; 
-  }
-
-
-.reservation__checkbox-label { 
-    display: flex;
-    align-items: center;  
-    justify-content: center;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-}
-.reservation__checkbox {
-    width: 20px;
-    height: 20px;
-    margin-right: 12px;
-}
-
-.footer {
-    background-color: #0A2850;
-    color: white;
-}
-
-.footer__content {
-    display: flex;
-    justify-content: space-between;
-    padding-top: 60px;
-    padding-left: 80px;
-    padding-right: 80px;
-}
-
-.footer__logo {
-    width: 105px;
-    height: 39px;
-}
-
-.footer__circle {
-    margin: 0%;
-}
-
-.footer__social {
-    text-align: right;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-}
-
-.footer__social-heading {
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 20px;
-    margin: 0;
-    margin-bottom: 20px;
-}
-
-.footer__list {
-    display: flex;
-    list-style: none;
-    flex-direction: column;
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 20px;
-    margin: 0;
-    margin-bottom: 20px;
-    margin: 0;
-    padding: 0;
-}
-
-.footer__list-item {
-    margin-bottom: 16px;
-}
-
-.footer__social-link {
-    color: inherit;
-    text-decoration: none;
-}
-
-.footer__social-icon {
-    width: 16px;
-    height: 16px;
-    margin-right: 10px;
-}
-
-.footer__copyright {
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 20px;
-    padding-left: 80px;
-    padding-top: 108px;
-    padding-bottom: 60px;
-}
-
-
-
+@import url('../vendor/normalize.css');
+@import url('../blocks/page.css');
+@import url('../blocks/nav.css');
+@import url('../blocks/header.css');
+@import url('../blocks/content.css');
+@import url('../blocks/recipes.css');
+@import url('../blocks/form.css');
+@import url('../blocks/reservation.css');
+@import url('../blocks/footer.css');
