--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -1,6 +1,5 @@
 .recipes {
-    border: 2px solid white;
-    margin-bottom: 215px;
+    padding-bottom: 215px;
 }
 
 .recipes__title {
@@ -10,7 +9,7 @@
     font-size: 44px;
     line-height: 52px;
     max-width: 580px;
-    margin-top: 100px;
+    padding-top: 100px;
     margin-left: 80px;
 }
 
@@ -29,7 +28,7 @@
     margin-top: 80px;
     display: flex;
     justify-content: center;
-    gap: 40px; /* Espacio entre los videos */
+    gap: 40px; 
     flex-wrap: wrap;
     margin-top: 80px;
 }
