--- a/blocks/form.css
+++ b/blocks/form.css
@@ -1,3 +1,7 @@
+.form {
+    background-image: url(/images/background_reservation.svg);
+}
+
 .reservation__form {
     margin: 0 auto 120px;
     max-width: 385px;
