--- a/blocks/form.css
+++ b/blocks/form.css
@@ -1,5 +1,24 @@
-.form {
-    background-image: url(/images/background_reservation.svg);
+.reservation {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #D9E7FF;
+    background-image: url(..images/background_reservation.svg);
+    background-size: cover;
+    color: #000000;
+}
+
+.reservation__title {
+    font-size: 24px;
+    margin: 0px auto 80px;
+    padding-top: 100px;
+    text-align: center;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 44px;
+    line-height: 52px;
 }
 
 .reservation__form {
