--- a/blocks/form.css
+++ b/blocks/form.css
@@ -1,106 +1,3 @@
-.reservation {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #D9E7FF;
-    background-image: url(..images/background_reservation.svg);
-    background-size: cover;
-    color: #000000;
-}
-
-.reservation__title {
-    font-size: 24px;
-    margin: 0px auto 80px;
-    padding-top: 100px;
-    text-align: center;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 44px;
-    line-height: 52px;
-}
-
-.reservation__form {
-    margin: 0 auto 120px;
-    max-width: 385px;
-    width: 100%;
-}
-
-.reservation__fieldset {
-    border: none;
-    padding: 0;
-    margin: 0 0 20px 0;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-
-.reservation__label {
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-    margin-bottom: 8px;
-}
-
-.reservation__input {
-    font-family: Inter;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 30px;
-    height: 60px;
-    margin-bottom: 32px;
-    border-radius: 4px;
-    border: none;
-}
-
-.reservation__input::placeholder {
-    padding-left: 20px;
-    padding-top: 15px;
-}
-
-.reservation__input[type="datetime-local"] {
-    padding-left: 20px;
-}
-
-.reservation__button {
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-    max-width: 385px;
-    width: 100%;
-    height: 60px;
-    background-color: #2f80ed;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-top: 32px;
-    margin-bottom: 32px;
-}
-
-.reservation__button:hover {
-    opacity: 0.7;
-}
-
-.reservation__checkbox-label { 
-    display: flex;
-    align-items: center;  
-    justify-content: center;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-}
-
-.reservation__checkbox {
-    width: 20px;
-    height: 20px;
-    margin-right: 12px;
+.form {
+    background-image: url(/images/background_reservation.svg);
 }
