--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,6 +1,7 @@
-.page {
-    min-width: 1100px;
-    max-width: 1600px;
+page {
+    min-height: 720px;
+    max-height: 800px;
+    height: 100vh;
     margin: auto;
     font-family: 'Inter', Arial, sans-serif;
     font-size: 16px; 
