--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,6 +1,6 @@
 .page {
-    min-height: 720px;
-    max-height: 800px;
+     min-width: 1100px;
+  max-width: 1600px;
     height: 100vh;
     margin: auto;
     font-family: 'Inter', Arial, sans-serif;
